Fix header padding to align with panels

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,9 +1,10 @@
 .Header {
+  padding: 1.5rem;
+
   &__container {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    padding: 2rem;
   }
 
   &__brand {
